<package>
  <name>kondo_b3m</name>
  <version>0.0.1</version>
  <description>ROS package suite of kondo_b3m</description>
  <maintainer email="nomumu-github@koso2-dan.ddo.jp">nomumu</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>kondo_b3m_control</run_depend>
  <run_depend>kondo_b3m_description</run_depend>
  <run_depend>kondo_b3m_gazebo</run_depend>
  <run_depend>kondo_b3m_examples</run_depend>

  <export>
    <metapackage/>
  </export>
</package>